Bug #34484 [WIP] * fixed reference to undefined * fixed undefined description of apps * added package dependencies * added automatic DNS query of domain name * ensure that wizard values are returned in the correct format for backend * ensure that apps are displayed only for the selected server role * replaced old software component handling from installer with apps * read pre-configured DHCP settings + apply them to the network wizard page * add backend-side auto completion of specific config values * add UCS system activation via submitted email address in setup-join.sh
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51969 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,19 @@
+univention-system-setup (7.0.69-19) unstable; urgency=medium
+
+  Bug #34484 [WIP]
+  * fixed reference to undefined
+  * fixed undefined description of apps
+  * added package dependencies
+  * added automatic DNS query of domain name
+  * ensure that wizard values are returned in the correct format for backend
+  * ensure that apps are displayed only for the selected server role
+  * replaced old software component handling from installer with apps
+  * read pre-configured DHCP settings + apply them to the network wizard page
+  * add backend-side auto completion of specific config values
+  * add UCS system activation via submitted email address in setup-join.sh
+
+ -- Alexander Kläser <klaeser@univention.de>  Sat, 19 Jul 2014 12:50:43 +0200
+
 univention-system-setup (7.0.69-18) unstable; urgency=medium
 
   Bug #34484 [WIP]
