* Bug #34484: [WIP] make sure that test cases can be run during build
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51970 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-20) unstable; urgency=medium
+
+  * Bug #34484: [WIP] make sure that test cases can be run during build 
+
+ -- Alexander Kläser <klaeser@univention.de>  Sat, 19 Jul 2014 13:32:25 +0200
+
 univention-system-setup (7.0.69-19) unstable; urgency=medium
 
   Bug #34484 [WIP]
