* 00_base/47faillog_account-smb-krb: skip this test in S4 environment   (Bug #35014)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51971 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-60) unstable; urgency=low
+
+  * 00_base/47faillog_account-smb-krb: skip this test in S4 environment
+    (Bug #35014)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 19 Jul 2014 14:08:21 +0200
+
 ucs-test (4.0.166-59) unstable; urgency=low
 
   * 52_s4connector/022_concurrent_deletion_in_ucs: Try to emulate a
