* Bug #34484: [WIP] integration of server side validation + summary
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51973 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-22) unstable; urgency=medium
+
+  * Bug #34484: [WIP] integration of server side validation + summary
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 21 Jul 2014 00:14:41 +0200
+
 univention-system-setup (7.0.69-21) unstable; urgency=medium
 
   Bug #34484 [WIP]
