* Bug #35145: use closure as JavaScript build optimizer
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51974 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.0.2-1) unstable; urgency=low
+
+  * Bug #35145: use closure as JavaScript build optimizer
+
+ -- Florian Best <best@univention.de>  Mon, 21 Jul 2014 08:37:28 +0200
+
 univention-management-console-frontend (4.0.1-1) unstable; urgency=low
 
   Bug #34484:
