Bug #35144: disabled dependency to univention-directory-listener temporarily
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51978 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ssl/debian/changelog
+++ b/base/univention-ssl/debian/changelog
@@ -1,3 +1,9 @@
+univention-ssl (9.0.0-3) unstable; urgency=low
+
+  * Bug #35144: disabled dependency to univention-directory-listener temporarily
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 21 Jul 2014 10:05:02 +0200
+
 univention-ssl (9.0.0-2) unstable; urgency=low
 
   * Bug #35144: disabled dependency to univention-directory-listener temporarily
