--- a/services/univention-postgresql/debian/changelog
+++ b/services/univention-postgresql/debian/changelog
@@ -1,3 +1,9 @@
+univention-postgresql (7.0.0-2) unstable; urgency=low
+
+  * added postgresql-9.1 support (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 21 Jul 2014 10:46:06 +0200
+
 univention-postgresql (7.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35147) 
