--- a/services/univention-postgresql/debian/changelog
+++ b/services/univention-postgresql/debian/changelog
@@ -1,3 +1,9 @@
+univention-postgresql (7.0.0-4) unstable; urgency=low
+
+  * changed postgres9/maxconnections default to 100 (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 21 Jul 2014 11:10:45 +0200
+
 univention-postgresql (7.0.0-3) unstable; urgency=low
 
   * added postgresql-9.1 support (Bug #35147) 
