--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.0-2) unstable; urgency=low
+
+  * new default backend mdb (Bug #34994) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 21 Jul 2014 11:46:00 +0200
+
 univention-ldap (11.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35143) 
