small fixes (Bug #35394)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51994 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (1.0.0-2) unstable; urgency=low
+
+  * small fixes (Bug #35394) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 21 Jul 2014 12:51:15 +0200
+
 ucs-windows-tools (1.0.0-1) unstable; urgency=low
 
   * initial release (Bug #35394) 
