--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (1.0.0-3) unstable; urgency=low
+
+  * support batch and powershell scripts (Bug #35394) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 21 Jul 2014 13:53:46 +0200
+
 ucs-windows-tools (1.0.0-2) unstable; urgency=low
 
   * small fixes (Bug #35394) 
