support batch and powershell scripts (Bug #35394)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52004 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (1.0.0-4) unstable; urgency=low
+
+  * support batch and powershell scripts (Bug #35394) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 21 Jul 2014 14:01:37 +0200
+
 ucs-windows-tools (1.0.0-3) unstable; urgency=low
 
   * support batch and powershell scripts (Bug #35394) 
