--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,13 @@
+univention-system-setup (7.0.69-23) unstable; urgency=medium
+
+  Bug #34484 [WIP]
+  * added more validation
+  * automatic focus on invalid widgets
+  * summarize changes
+  * handle timeout errors for DNS lookups
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 21 Jul 2014 14:19:36 +0200
+
 univention-system-setup (7.0.69-22) unstable; urgency=medium
 
   * Bug #34484: [WIP] integration of server side validation + summary
