--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-24) unstable; urgency=medium
+
+  * Bug #34484: [WIP] fixed fuzzy entries
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 21 Jul 2014 14:32:47 +0200
+
 univention-system-setup (7.0.69-23) unstable; urgency=medium
 
   Bug #34484 [WIP]
