Bug #35375 d-i: Re-enable user-setup-udeb
to allow setting up the root password again.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52013 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-4) unstable; urgency=low
+
+  * Re-enable user-setup-udeb to setup root password (Bug #35375)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 21 Jul 2014 15:57:28 +0200
+
 univention-dvd (0.2.0-3) unstable; urgency=low
 
   * Bug #35384,35385,35372,35375: Fix path
