--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,21 @@
+univention-updater (9.0.41-4) unstable; urgency=medium
+
+  * Transfer UCS component installation status in APT user agent (Bug #33807)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 04 Jul 2014 15:22:37 +0200
+
+univention-updater (9.0.41-2) unstable; urgency=low
+
+  * Bug #35022: Do not register apps when only installing master packages
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 25 Jun 2014 15:41:48 +0200
+
+univention-updater (9.0.41-1) unstable; urgency=low
+
+  * Unset uuid/license if univentionLicenseKeyID is missing in license (Bug #34809)
+
+ -- Felix Botner <botner@univention.de>  Wed, 18 Jun 2014 10:14:40 +0200
+
 univention-updater (9.0.40-1) unstable; urgency=low
 
   * Adjust pre- and postup.sh for UCS 3.2-2 (Bug #33809)
