--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Mon, 21 Jul 2014 18:38:48 +0200
+
 univention-updater (9.0.41-4) unstable; urgency=medium
 
   * Transfer UCS component installation status in APT user agent (Bug #33807)
