--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-56) unstable; urgency=low
+
+  * Update the deleted cache after the deletion of an object
+    (Bug #32263)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Jul 2014 06:21:23 +0200
+
 univention-s4-connector (8.0.33-55) unstable; urgency=low
 
   * Revert: Add the newly created S4 object to the s4 cache (Bug #33621
