--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-58) unstable; urgency=low
+
+  * Added old pbject to sync_to_ucs call (Bug #33621)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Jul 2014 06:31:43 +0200
+
 univention-s4-connector (8.0.33-56) unstable; urgency=low
 
   * Update the deleted cache after the deletion of an object
