* Use plain objectGUID for S4 sqlite tables (Bug #33621, Bug #32263)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52022 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-60) unstable; urgency=low
+
+  * Use plain objectGUID for S4 sqlite tables (Bug #33621, Bug #32263)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Jul 2014 07:03:19 +0200
+
 univention-s4-connector (8.0.33-59) unstable; urgency=low
 
   * s4connector/s4cache.py: Normalize the values before comparing
