Bug #35425 UVMM: UCS-4.0 version bump
Python 2.6 -> 2.7
Debhelper 9.
Remove previous upgrade handling.
Drop useless *.dirs files.
Extend copyright to 2014.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52026 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-novnc/debian/changelog
+++ b/virtualization/univention-novnc/debian/changelog
@@ -1,3 +1,9 @@
+univention-novnc (0.4+0+20131014+git142aa45-5) unstable; urgency=low
+
+  * UCS-4.0 version bump (Bug #35425)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 21 Jul 2014 17:17:14 +0200
+
 univention-novnc (0.4+0+20131014+git142aa45-4) unstable; urgency=low
 
   * Add HTML Metatags to forbid caching of vnc_auto.html. This avoids certificate
