--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-1) unstable; urgency=low
+
+  * UCS-4.0 version bump (Bug #35425)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 21 Jul 2014 16:13:11 +0200
+
 univention-virtual-machine-manager-daemon (3.0.17-12) unstable; urgency=low
 
   * Bug #35107: Fix handling of paused VMs.
