--- a/virtualization/univention-virtual-machine-manager-node/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-node/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-node (3.0.0-1) unstable; urgency=low
+
+  * UCS-4.0 version bump (Bug #35425)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 21 Jul 2014 16:14:49 +0200
+
 univention-virtual-machine-manager-node (2.0.5-8) unstable; urgency=low
 
   * Revert URL update until new manual is published (Bug #33444)
