Renamed Active Directory Connector to Active Directory Connection (Bug #35414)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52027 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,10 @@
+univention-installer (9.0.32-6) unstable; urgency=low
+
+  * Renamed Active Directory Connector to 
+    Active Directory Connection (Bug #35414)
+
+ -- Felix Botner <botner@univention.de>  Tue, 22 Jul 2014 09:31:21 +0200
+
 univention-installer (9.0.32-5) unstable; urgency=low
 
   * Fixed another typo in the german translation (Bug #34334)
