Bug #35425 noVNC: Fix python2.7 usage
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52034 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-novnc/debian/changelog
+++ b/virtualization/univention-novnc/debian/changelog
@@ -1,3 +1,9 @@
+univention-novnc (0.4+0+20131014+git142aa45-6) unstable; urgency=low
+
+  * Fix python2.7 usage (Bug #35425)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 22 Jul 2014 10:29:36 +0200
+
 univention-novnc (0.4+0+20131014+git142aa45-5) unstable; urgency=low
 
   * UCS-4.0 version bump (Bug #35425)
