--- a/base/univention-debmirror/debian/changelog
+++ b/base/univention-debmirror/debian/changelog
@@ -1,3 +1,9 @@
+univention-debmirror (6.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35267)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Tue, 22 Jul 2014 10:33:54 +0200
+
 univention-debmirror (5.0.5-6) unstable; urgency=low
 
   * Added univention-debmirror.postrm and univention.debmirror.prerm.
