Bug #35135: set compat level to 9
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52039 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/ucslint/debian/changelog
+++ b/packaging/ucslint/debian/changelog
@@ -1,3 +1,9 @@
+ucslint (4.0.0-2) unstable; urgency=low
+
+  * Bug #35135: set compat level to 9
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 22 Jul 2014 10:45:45 +0200
+
 ucslint (4.0.0-1) unstable; urgency=low
 
   * Bug #35135: bumped version for UCS 4
