changed german translation (Bug #35414)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52043 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/installer/locale/de/LC_MESSAGES/installer.po
+++ b/base/univention-installer/installer/locale/de/LC_MESSAGES/installer.po
@@ -272,7 +272,7 @@ msgstr "Windows Memberserver (Samba 3 / Samba 4)"
 
 #: installer/package_list.py:91
 msgid "Active Directory Connection"
-msgstr "Active Directory Connection"
+msgstr "Active Directory Verbindung"
 
 #: installer/package_list.py:96
 msgid "Sync users and groups with Active Directory"
