--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.32-8) unstable; urgency=low
+
+  * changed german translation (Bug #35414) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 22 Jul 2014 11:06:03 +0200
+
 univention-installer (9.0.32-7) unstable; urgency=low
 
   * fixed last commit (Bug #35414) 
