Bug #34484: * integration and cleanup of appliance join and standard setup save process * handle errors during setup process * removed first name, last name, and description for Administrator account * fixed a few typos in the python files
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52058 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,13 @@
+univention-system-setup (7.0.69-25) unstable; urgency=medium
+
+  Bug #34484:
+  * integration and cleanup of appliance join and standard setup save process
+  * handle errors during setup process
+  * removed first name, last name, and description for Administrator account
+  * fixed a few typos in the python files
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 22 Jul 2014 12:50:05 +0200
+
 univention-system-setup (7.0.69-24) unstable; urgency=medium
 
   * Bug #34484: [WIP] fixed fuzzy entries
