Bug #34484: * set primary interface automatically * fixed typo for setting ssl/email * fixed the activation of UCS (via umc call)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52059 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,12 @@
+univention-system-setup (7.0.69-26) unstable; urgency=medium
+
+  Bug #34484:
+  * set primary interface automatically
+  * fixed typo for setting ssl/email
+  * fixed the activation of UCS (via umc call)
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 22 Jul 2014 13:16:46 +0200
+
 univention-system-setup (7.0.69-25) unstable; urgency=medium
 
   Bug #34484:
