--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-27) unstable; urgency=medium
+
+  * Bug #34484: fixed fuzzy entries
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 22 Jul 2014 13:38:45 +0200
+
 univention-system-setup (7.0.69-26) unstable; urgency=medium
 
   Bug #34484:
