--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,12 @@
+univention-system-setup (7.0.69-28) unstable; urgency=medium
+
+  Bug #34484:
+  * integrated DHCP query
+  * added DNS checks for UCS nameserver
+  * fixed pyflake errors
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 22 Jul 2014 14:40:51 +0200
+
 univention-system-setup (7.0.69-27) unstable; urgency=medium
 
   * Bug #34484: fixed fuzzy entries
