Bug #34484: * integration and cleanup of appliance join and standard setup save process * handle errors during setup process * removed first name, last name, and description for Administrator account * fixed a few typos in the python files * set primary interface automatically * fixed typo for setting ssl/email * fixed the activation of UCS (via umc call) * integrated DHCP query * added DNS checks for UCS nameserver * fixed pyflake errors
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52063 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,19 @@
+univention-system-setup (8.0.6-1) unstable; urgency=low
+
+  Bug #34484:
+  * integration and cleanup of appliance join and standard setup save process
+  * handle errors during setup process
+  * removed first name, last name, and description for Administrator account
+  * fixed a few typos in the python files
+  * set primary interface automatically
+  * fixed typo for setting ssl/email
+  * fixed the activation of UCS (via umc call)
+  * integrated DHCP query
+  * added DNS checks for UCS nameserver
+  * fixed pyflake errors
+
+ -- Florian Best <best@univention.de>  Tue, 22 Jul 2014 14:57:50 +0200
+
 univention-system-setup (8.0.5-1) unstable; urgency=low
 
   Bug #34484 [WIP]
