Bug #34484: * take ipv6/gateway into account * remove 'back' button on last wizard page * let appliance page refer to UMC without header and without overview page
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52065 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,12 @@
+univention-system-setup (7.0.69-29) unstable; urgency=medium
+
+  Bug #34484:
+  * take ipv6/gateway into account
+  * remove 'back' button on last wizard page
+  * let appliance page refer to UMC without header and without overview page
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 22 Jul 2014 17:21:03 +0200
+
 univention-system-setup (7.0.69-28) unstable; urgency=medium
 
   Bug #34484:
