--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-61) unstable; urgency=low
+
+  * Added more diff mode patches from Arvid (Bug #33621)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 22 Jul 2014 17:59:34 +0200
+
 univention-s4-connector (8.0.33-60) unstable; urgency=low
 
   * Use plain objectGUID for S4 sqlite tables (Bug #33621, Bug #32263)
