* Bug #34484: fixed indentation and moved UCS activiation (as script in   cleanup-post.d directory)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52067 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-30) unstable; urgency=medium
+
+  * Bug #34484: fixed indentation and moved UCS activiation (as script in
+    cleanup-post.d directory)
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 22 Jul 2014 19:00:11 +0200
+
 univention-system-setup (7.0.69-29) unstable; urgency=medium
 
   Bug #34484:
