--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-31) unstable; urgency=medium
+
+  * Bug #34484: added translations
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 22 Jul 2014 20:15:44 +0200
+
 univention-system-setup (7.0.69-30) unstable; urgency=medium
 
   * Bug #34484: fixed indentation and moved UCS activiation (as script in
