* Temporarily set the dns/alias syntax back to string again. The new   label breaks S4 backups and slaves (Bug #35254)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52069 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-17) unstable; urgency=low
+
+  * Temporarily set the dns/alias syntax back to string again. The new
+    label breaks S4 backups and slaves (Bug #35254)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 23 Jul 2014 06:14:46 +0200
+
 univention-directory-manager-modules (9.0.76-16) unstable; urgency=low
 
   * limit possible characters in dns/alias (Bug #35254)
