Univention package update for UCS-4.0 but did not change the python hashbang for now (Bug #35148)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52074 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (1.0.0-1) unstable; urgency=low
+
+  * Starting UCS 4.0 development (Bug #35148)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 23 Jul 2014 07:54:23 +0200
+
 ucs-ec2-tools (0.1.20-1) unstable; urgency=low
 
   * Increase EC2 connection timeout (Bug #34866)
