--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,12 @@
+univention-samba (8.0.19-4) unstable; urgency=low
+
+  * don't add/remove service "AD Member"
+  * set profilepath and homedirs settings in
+    join script instead in postinst
+  * remove univention-samba-ad-member (Bug #35095)
+
+ -- Felix Botner <botner@univention.de>  Wed, 23 Jul 2014 09:45:57 +0200
+
 univention-samba (8.0.19-3) unstable; urgency=low
 
   * fixed postinst (Bug #35095) 
