* remove admember from install file (Bug #35091)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52079 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-17) unstable; urgency=low
+
+  * remove admember from install file (Bug #35091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 23 Jul 2014 10:12:12 +0200
+
 univention-ad-connector (8.0.17-16) unstable; urgency=low
 
   * Move admember lib to univention-lib (Bug #35091)
