* python/admember: fixed is_domain_in_admember_mode function   (Bug #35091)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52080 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-24) unstable; urgency=low
+
+  * python/admember: fixed is_domain_in_admember_mode function
+    (Bug #35091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 23 Jul 2014 10:35:28 +0200
+
 univention-lib (3.0.26-23) unstable; urgency=low
 
   * Migrate admember functions from univention-ad-connector to
