--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.19-6) unstable; urgency=low
+
+  * replaced ldap search with is_domain_in_admember_mode (Bug #35095) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 23 Jul 2014 10:46:14 +0200
+
 univention-samba (8.0.19-5) unstable; urgency=low
 
   * removed univention-samba-ad-member (Bug #35095) 
