Bug #35437: added automatic KVM detection in utils.sh
(Merged from UCS 3.2-2 r52073)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52087 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -4,6 +4,12 @@ ucs-ec2-tools (1.0.0-1) unstable; urgency=low
 
  -- Alexander Kramer <kramer@univention.de>  Wed, 23 Jul 2014 07:54:23 +0200
 
+ucs-ec2-tools (0.1.21-1) unstable; urgency=low
+
+  * Bug #35437: added automatic KVM detection in utils.sh
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Jul 2014 08:37:12 +0200
+
 ucs-ec2-tools (0.1.20-2) unstable; urgency=low
 
   * examples/jenkins/autotest-*.cfg: copy the ~/ec2/license/license.secret
