--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-27) unstable; urgency=low
+
+  * added some more helper function in 
+    admember lib (Bug #35446) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 23 Jul 2014 12:10:46 +0200
+
 univention-lib (3.0.26-26) unstable; urgency=low
 
   * added configure_backup_as_ad_member(), 
