--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-32) unstable; urgency=medium
+
+  * Bug #34484: fixed reference to undefined
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Jul 2014 12:15:21 +0200
+
 univention-system-setup (7.0.69-31) unstable; urgency=medium
 
   * Bug #34484: added translations
