--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (10.0.0-3) unstable; urgency=low
+
+  * Remove univention-directory-policy from the dependencies and add it
+    to the list of recommended packages (Bug #35431)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 23 Jul 2014 12:28:00 +0200
+
 univention-updater (10.0.0-2) unstable; urgency=medium
 
   * Update to UCS 4.0 (Bug #35267)
