added uninstall_univention_samba (Bug #35446)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52100 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-28) unstable; urgency=low
+
+  * added uninstall_univention_samba (Bug #35446) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 23 Jul 2014 12:29:29 +0200
+
 univention-lib (3.0.26-27) unstable; urgency=low
 
   * added some more helper function in 
