Bug #35135: set compat level to 9 (part 2)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52101 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/ucslint/debian/changelog
+++ b/packaging/ucslint/debian/changelog
@@ -1,3 +1,9 @@
+ucslint (4.0.0-3) unstable; urgency=low
+
+  * Bug #35135: set compat level to 9 (part 2)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Jul 2014 12:30:50 +0200
+
 ucslint (4.0.0-2) unstable; urgency=low
 
   * Bug #35135: set compat level to 9
