* uss-boot: remove dependecy to univention-server-master * uss-boot: allow iceweasel as browser   Bug #35267
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52103 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (8.0.7-2) unstable; urgency=low
+
+  * uss-boot: remove dependecy to univention-server-master
+  * uss-boot: allow iceweasel as browser
+    Bug #35267
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 23 Jul 2014 12:36:05 +0200
+
 univention-system-setup (8.0.7-1) unstable; urgency=low
 
   Bug #34484:
