Bug #34484: * some text changes * added tooltips to hostname and proxy field * fixed CSS margins on page for role selection
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52106 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,12 @@
+univention-system-setup (7.0.69-33) unstable; urgency=medium
+
+  Bug #34484:
+  * some text changes
+  * added tooltips to hostname and proxy field
+  * fixed CSS margins on page for role selection
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 23 Jul 2014 13:38:30 +0200
+
 univention-system-setup (7.0.69-32) unstable; urgency=medium
 
   * Bug #34484: fixed reference to undefined
