Bug #34388: * Only show introduction page if UCRV server/amazon is set to true * Removed duplicate code from javascript * Changed directory structure
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52113 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,12 @@
+univention-system-setup (8.0.7-3) unstable; urgency=low
+
+  Bug #34388:
+  * Only show introduction page if UCRV server/amazon is set to true
+  * Removed duplicate code from javascript
+  * Changed directory structure 
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 23 Jul 2014 14:07:22 +0200
+
 univention-system-setup (8.0.7-2) unstable; urgency=low
 
   * uss-boot: remove dependecy to univention-server-master
