--- a/base/univention-system-setup/umc/js/de.po
+++ b/base/univention-system-setup/umc/js/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-setup\n"
 "Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: 2014-07-23 13:36+0200\n"
+"POT-Creation-Date: 2014-07-23 14:26+0200\n"
 "PO-Revision-Date: 2012-02-20 11:34+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -554,8 +554,8 @@ msgstr ""
 
 #: umc/js/setup/ApplianceWizard.js:744
 msgid ""
-"For a specified host name, the domain name is automatically deferred from "
-"the domain name server. A fully qualified domain may be necessary for mail "
+"For a specified host name, the domain name is automatically derived from the "
+"domain name server. A fully qualified domain may be necessary for mail "
 "server setups with differing domains.<br/>Note that the domain name "
 "<b>cannot</b> be changed after the UCS setup wizard has been completed."
 msgstr ""
