--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-37) unstable; urgency=low
+
+  * Bug #34388: Updated links to appliance wizard 
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 23 Jul 2014 15:27:49 +0200
+
 univention-system-setup (7.0.69-36) unstable; urgency=medium
 
   * Bug #34484: show the guessed domain name in the summary page
