--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.7-4) unstable; urgency=low
+
+  * Bug #34388: Updated links to appliance wizard 
+
+ -- Erik Damrose <damrose@univention.de>  Wed, 23 Jul 2014 15:29:29 +0200
+
 univention-system-setup (8.0.7-3) unstable; urgency=low
 
   Bug #34388:
