--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,10 @@
+univention-join (6.0.18-6) unstable; urgency=low
+
+  * do not configure ad member mode if ad/member is
+    already true (Bug #35446)
+
+ -- Felix Botner <botner@univention.de>  Wed, 23 Jul 2014 16:08:09 +0200
+
 univention-join (6.0.18-5) unstable; urgency=low
 
   * log ad member mode (Bug #35446) 
