--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-31) unstable; urgency=low
+
+  * fixed univentionSambaWrongVersion error message (Bug #35446) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 23 Jul 2014 16:14:06 +0200
+
 univention-lib (3.0.26-30) unstable; urgency=low
 
   * log package mananger actions (Bug #35446) 
