* Revert GuidNotInCache part of last patch, this would change the behaviour   and break resync of an S4-object which is not found in the cache. Maybe   there are use cases for this (Bug #33621). * Give an estimate of the resync delay.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52129 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,12 @@
+univention-s4-connector (8.0.33-62) unstable; urgency=medium
+
+  * Revert GuidNotInCache part of last patch, this would change the behaviour
+    and break resync of an S4-object which is not found in the cache. Maybe
+    there are use cases for this (Bug #33621).
+  * Give an estimate of the resync delay.
+
+ -- Arvid Requate <requate@univention.de>  Wed, 23 Jul 2014 16:36:18 +0200
+
 univention-s4-connector (8.0.33-61) unstable; urgency=low
 
   * Added more diff mode patches from Arvid (Bug #33621)
