--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-63) unstable; urgency=medium
+
+  * Abort joinscript if is_domain_in_admember_mode (Bug #35252)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 23 Jul 2014 17:17:44 +0200
+
 univention-s4-connector (8.0.33-62) unstable; urgency=medium
 
   * Revert GuidNotInCache part of last patch, this would change the behaviour
