--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-18) unstable; urgency=low
+
+  * Don't sync 'NO PASSWORD' hashes back to AD (Bug #35091)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 24 Jul 2014 07:31:06 +0200
+
 univention-ad-connector (8.0.17-17) unstable; urgency=low
 
   * remove admember from install file (Bug #35091)
