--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.2-1) unstable; urgency=low
+
+  * Bug #35378: install univention-system-setup
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Jul 2014 10:46:36 +0200
+
 di-univention-system-setup (0.0.1-1) unstable; urgency=low
 
   * Initial test version
